EXTRA_DIST=Makefile.bcc32 mk_sb_tbl.awk
noinst_LTLIBRARIES=libmbfl_filters.la
INCLUDES=-I../mbfl
libmbfl_filters_la_LDFLAGS=-version-info $(SHLIB_VERSION)
libmbfl_filters_la_SOURCES=mbfilter_cp936.c \
	mbfilter_hz.c \
	mbfilter_euc_tw.c \
	mbfilter_big5.c \
	mbfilter_euc_jp.c \
	mbfilter_jis.c \
	mbfilter_iso8859_1.c \
	mbfilter_iso8859_2.c \
	mbfilter_cp1254.c \
	mbfilter_cp1252.c \
	mbfilter_cp1251.c \
	mbfilter_ascii.c \
	mbfilter_iso8859_3.c \
	mbfilter_iso8859_4.c \
	mbfilter_iso8859_5.c \
	mbfilter_iso8859_6.c \
	mbfilter_iso8859_7.c \
	mbfilter_iso8859_8.c \
	mbfilter_iso8859_9.c \
	mbfilter_iso8859_10.c \
	mbfilter_iso8859_13.c \
	mbfilter_iso8859_14.c \
	mbfilter_iso8859_15.c \
	mbfilter_iso8859_16.c \
	mbfilter_htmlent.c \
	mbfilter_byte2.c \
	mbfilter_byte4.c \
	mbfilter_uuencode.c \
	mbfilter_base64.c \
	mbfilter_sjis.c \
	mbfilter_7bit.c \
	mbfilter_qprint.c \
	mbfilter_ucs4.c \
	mbfilter_ucs2.c \
	mbfilter_utf32.c \
	mbfilter_utf16.c \
	mbfilter_utf8.c \
	mbfilter_utf7.c \
	mbfilter_utf7imap.c \
	mbfilter_euc_jp_win.c \
	mbfilter_cp932.c \
	mbfilter_cp51932.c \
	mbfilter_euc_cn.c \
	mbfilter_euc_kr.c \
	mbfilter_uhc.c \
	mbfilter_iso2022_jp_ms.c \
	mbfilter_iso2022_kr.c \
	mbfilter_cp866.c \
	mbfilter_koi8r.c \
	mbfilter_koi8u.c \
	mbfilter_armscii8.c \
	mbfilter_cp850.c \
	html_entities.c \
	cp932_table.h \
	html_entities.h \
	mbfilter_7bit.h \
	mbfilter_ascii.h \
	mbfilter_base64.h \
	mbfilter_big5.h \
	mbfilter_byte2.h \
	mbfilter_byte4.h \
	mbfilter_cp1251.h \
	mbfilter_cp1252.h \
	mbfilter_cp1254.h \
	mbfilter_cp866.h \
	mbfilter_cp932.h \
	mbfilter_cp936.h \
	mbfilter_euc_cn.h \
	mbfilter_euc_jp.h \
	mbfilter_euc_jp_win.h \
	mbfilter_euc_kr.h \
	mbfilter_euc_tw.h \
	mbfilter_htmlent.h \
	mbfilter_hz.h \
	mbfilter_iso2022_jp_ms.h \
	mbfilter_iso2022_kr.h \
	mbfilter_iso8859_1.h \
	mbfilter_iso8859_10.h \
	mbfilter_iso8859_13.h \
	mbfilter_iso8859_14.h \
	mbfilter_iso8859_15.h \
	mbfilter_iso8859_16.h \
	mbfilter_iso8859_2.h \
	mbfilter_iso8859_3.h \
	mbfilter_iso8859_4.h \
	mbfilter_iso8859_5.h \
	mbfilter_iso8859_6.h \
	mbfilter_iso8859_7.h \
	mbfilter_iso8859_8.h \
	mbfilter_iso8859_9.h \
	mbfilter_jis.h \
	mbfilter_koi8r.h \
	mbfilter_koi8u.h \
	mbfilter_armscii8.h \
	mbfilter_qprint.h \
	mbfilter_sjis.h \
	mbfilter_ucs2.h \
	mbfilter_ucs4.h \
	mbfilter_uhc.h \
	mbfilter_utf16.h \
	mbfilter_utf32.h \
	mbfilter_utf7.h \
	mbfilter_utf7imap.h \
	mbfilter_utf8.h \
	mbfilter_uuencode.h \
	mbfilter_cp51932.h \
	mbfilter_cp850.h \
	unicode_prop.h \
	unicode_table_big5.h \
	unicode_table_cns11643.h \
	unicode_table_cp1251.h \
	unicode_table_cp1252.h \
	unicode_table_cp1254.h \
	unicode_table_cp866.h \
	unicode_table_cp932_ext.h \
	unicode_table_cp936.h \
	unicode_table_iso8859_10.h \
	unicode_table_iso8859_13.h \
	unicode_table_iso8859_14.h \
	unicode_table_iso8859_15.h \
	unicode_table_iso8859_16.h \
	unicode_table_iso8859_2.h \
	unicode_table_iso8859_3.h \
	unicode_table_iso8859_4.h \
	unicode_table_iso8859_5.h \
	unicode_table_iso8859_6.h \
	unicode_table_iso8859_7.h \
	unicode_table_iso8859_8.h \
	unicode_table_iso8859_9.h \
	unicode_table_jis.h \
	unicode_table_koi8r.h \
	unicode_table_koi8u.h \
	unicode_table_armscii8.h \
	unicode_table_cp850.h \
	unicode_table_uhc.h

mbfilter_iso8859_2.c: unicode_table_iso8859_2.h

mbfilter_iso8859_3.c: unicode_table_iso8859_3.h

mbfilter_iso8859_4.c: unicode_table_iso8859_4.h

mbfilter_iso8859_5.c: unicode_table_iso8859_5.h

mbfilter_iso8859_6.c: unicode_table_iso8859_6.h

mbfilter_iso8859_7.c: unicode_table_iso8859_7.h

mbfilter_iso8859_8.c: unicode_table_iso8859_8.h

mbfilter_iso8859_9.c: unicode_table_iso8859_9.h

mbfilter_iso8859_10.c: unicode_table_iso8859_10.h

mbfilter_iso8859_11.c: unicode_table_iso8859_11.h

mbfilter_iso8859_13.c: unicode_table_iso8859_13.h

mbfilter_iso8859_14.c: unicode_table_iso8859_13.h

mbfilter_iso8859_15.c: unicode_table_iso8859_15.h

mbfilter_iso8859_16.c: unicode_table_iso8859_16.h

8859-1.TXT 8859-2.TXT 8859-3.TXT 8859-4.TXT 8859-5.TXT 8859-6.TXT \
8859-7.TXT 8859-8.TXT 8859-9.TXT 8859-10.TXT 8859-11.TXT 8859-13.TXT \
8859-14.TXT 8859-15.TXT 8859-16.TXT:
	$(FETCH_VIA_FTP) ftp://ftp.unicode.org/Public/MAPPINGS/ISO8859/$@

unicode_table_iso8859_1.h: mk_sb_tbl.awk
	$(AWK) -v TABLE_NAME=iso8859_1_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_1_H -f mk_sb_tbl.awk 8859-1.TXT > $@

unicode_table_iso8859_2.h: mk_sb_tbl.awk
	$(AWK) -v TABLE_NAME=iso8859_2_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_2_H -f mk_sb_tbl.awk 8859-2.TXT > $@

unicode_table_iso8859_3.h: mk_sb_tbl.awk
	$(AWK) -v TABLE_NAME=iso8859_3_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_3_H -f mk_sb_tbl.awk 8859-3.TXT > $@

unicode_table_iso8859_4.h: mk_sb_tbl.awk 
	$(AWK) -v TABLE_NAME=iso8859_4_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_4_H -f mk_sb_tbl.awk 8859-4.TXT > $@

unicode_table_iso8859_5.h: mk_sb_tbl.awk 
	$(AWK) -v TABLE_NAME=iso8859_5_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_5_H -f mk_sb_tbl.awk 8859-5.TXT > $@

unicode_table_iso8859_6.h: mk_sb_tbl.awk 
	$(AWK) -v TABLE_NAME=iso8859_6_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_6_H -f mk_sb_tbl.awk 8859-6.TXT > $@

unicode_table_iso8859_7.h: mk_sb_tbl.awk 
	$(AWK) -v TABLE_NAME=iso8859_7_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_7_H -f mk_sb_tbl.awk 8859-7.TXT > $@

unicode_table_iso8859_8.h: mk_sb_tbl.awk 
	$(AWK) -v TABLE_NAME=iso8859_8_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_8_H -f mk_sb_tbl.awk 8859-8.TXT > $@

unicode_table_iso8859_9.h: mk_sb_tbl.awk 
	$(AWK) -v TABLE_NAME=iso8859_9_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_9_H -f mk_sb_tbl.awk 8859-9.TXT > $@

unicode_table_iso8859_10.h: mk_sb_tbl.awk 
	$(AWK) -v TABLE_NAME=iso8859_10_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_10_H -f mk_sb_tbl.awk 8859-10.TXT > $@

unicode_table_iso8859_11.h: mk_sb_tbl.awk 
	$(AWK) -v TABLE_NAME=iso8859_11_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_11_H -f mk_sb_tbl.awk 8859-11.TXT > $@

unicode_table_iso8859_13.h: mk_sb_tbl.awk 
	$(AWK) -v TABLE_NAME=iso8859_13_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_13_H -f mk_sb_tbl.awk 8859-13.TXT > $@

unicode_table_iso8859_14.h: mk_sb_tbl.awk 
	$(AWK) -v TABLE_NAME=iso8859_14_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_14_H -f mk_sb_tbl.awk 8859-14.TXT > $@

unicode_table_iso8859_15.h: mk_sb_tbl.awk 
	$(AWK) -v TABLE_NAME=iso8859_15_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLE_ISO8859_15_H -f mk_sb_tbl.awk 8859-15.TXT > $@

unicode_table_iso8859_16.h: mk_sb_tbl.awk 
	$(AWK) -v TABLE_NAME=iso8859_16_ucs_table \
           -v IFNDEF_NAME=UNICODE_TABLEISO8859_16_H -f mk_sb_tbl.awk 8859-16.TXT > $@

unidata: 8859-1.TXT 8859-2.TXT 8859-3.TXT 8859-4.TXT 8859-5.TXT 8859-6.TXT \
8859-7.TXT 8859-8.TXT 8859-9.TXT 8859-10.TXT 8859-11.TXT 8859-13.TXT \
8859-14.TXT 8859-15.TXT 8859-16.TXT

.PHONY: unidata
